# gquill

./: README.md  pyproject.toml
gquill/: __init__.py  __main__.py  cli.py  doc_sync.py  sync_transcriber.py  update.py
