[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gquill"
version = "0.2.2"
description = "Real-time meeting transcription synced to Google Docs"
requires-python = ">=3.12"
dependencies = ["gdoc", "livekeet"]

[project.scripts]
gquill = "gquill.cli:main"

[tool.uv.sources]
gdoc = { git = "https://github.com/LucaDeLeo/gdoc.git" }
livekeet = { git = "https://github.com/LucaDeLeo/livekeet.git" }
